<resources>
    <string name="app_name">Meditation App</string>
    <string name="register">ÜYE OL</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E Posta</string>
    <string name="password">Şifre</string>
    <string name="remember_me">BENİ HATIRLA</string>
    <string name="enter_first_name">İsminizi Girin</string>
    <string name="enter_last_name">Soyisminizi Girin</string>
    <string name="enter_email">E-mail Adresinizi Girin</string>
    <string name="invalid_email">Geçersiz E-mail Adresi</string>
    <string name="enter_password">Şifrenizi Girin</string>
    <string name="invalid_password">Şifreniz En Az 6 Karakter Olmalı</string>
    <string name="has_not_uppercase">Şifrenizde En Az 1 Büyük Harf Olmalı</string>
    <string name="has_not_digit">Şifrenizde En Az 1 Sayı Olmalı</string>
    <string name="recaptcha_text">"I'm not a robot"</string>
    <string name="conditions_1">
        “Üye Ol” butonuna basarak Mobven Üyelik Sözleşmesi’ni, kişiselleştirilmiş pazarlamaya ilişkin Açık Rıza
        Metni’ni, yurt dışına aktarıma ilişkin Açık Rıza Metni’ni okuduğunuzu ve kabul ettiğinizi onaylıyorsunuz.
    </string>
    <string name="conditions_2">
        İletişim bilgilerinizin duyuru, yenilikler, reklam promosyon vb. ticari elektronik ileti gönderilmek
        üzere işlenmesi ve bu amaçla kullanılması, saklanması ve ticari elektronik ileti gönderilmesi ve bu
        gönderimin sağlanması için DeFactoFit’in hizmet aldığı üçüncü kişilerle paylaşması için Elektronik Ticari
        İleti Bilgilendirme metnini okuduğunuzu ve kabul ettiğinizi onaylıyorsunuz.
    </string>
    <string name="information">"Bilgilendirme"</string>
    <string name="not_available">"Bu özellik şu an için aktif değil!"</string>
    <string name="approve_terms_and_conditions">"Lütfen Sözleşmeleri ve Şartları Onaylayın."</string>
    <string name="error_recaptcha">"Lütfen Robot Olmadığınızı Doğrulayın."</string>
    <string name="on_boarding_first_title">"Congratulations!"</string>
    <string name="on_boarding_first_desc">"You are starting a diet program with no calorie limitation and "
        "meal details to keep in mind."
    </string>
    <string name="on_boarding_second_title">"Natural"</string>
    <string name="on_boarding_second_desc">"The method we will implement is one of the most effective methods since "
        "the existence of humanity."
    </string>
    <string name="on_boarding_third_title">"Effective and Healthy"</string>
    <string name="on_boarding_third_desc">"You will feel your body is burning fat with ketosis mode and you will not lose "
        "your body resistance."
    </string>
    <string name="on_boarding_four_title">"Applicable At All Levels"</string>
    <string name="on_boarding_four_desc">"Our plan has been tried by millions and successful results have been "
        "achieved."
    </string>
    <string name="start_now">"Start Now"</string>
    <string name="meditations_title">"Meditations"</string>
    <string name="meditation_detail_title">"Meditation Detail"</string>
    <string name="stories_title">"Stories"</string>
    <string name="story_detail_title">"Story Detail"</string>
    <string name="banner_text">"Look. Pretty, isn’t it? Perfectly balanced. As all things should be."</string>
</resources>